--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "express": "^4.18.1",
+    "mongodb": "^4.10.0",
     "next": "12.3.1",
+    "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "vercel": "^28.4.10"
   },
   "devDependencies": {
+    "axios": "^1.1.2",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "react-icons": "^4.6.0",
+    "swr": "^1.3.0"
   }
 }
